# tpAlgo1

./: README.md
src/: CMakeLists.txt  Funciones_TPI.cpp  Funciones_TPI.h  README  analisisEPH  coverage.info  definiciones.h  ejercicios.cpp  ejercicios.h  main.cpp
src/cobertura/: index-sort-f.html  index-sort-l.html  index.html
src/cobertura/src/: Funciones_TPI.cpp.func-sort-c.html  Funciones_TPI.cpp.func.html  Funciones_TPI.cpp.gcov.html  ejercicios.cpp.func-sort-c.html  ejercicios.cpp.func.html  ejercicios.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-sort-c.html  main.cpp.func.html  main.cpp.gcov.html
src/cobertura/src/lib/googletest-master/googletest/include/gtest/: gtest-printers.h.func-sort-c.html  gtest-printers.h.func.html  gtest-printers.h.gcov.html  gtest.h.func-sort-c.html  gtest.h.func.html  gtest.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
src/cobertura/src/lib/googletest-master/googletest/include/gtest/internal/: gtest-internal.h.func-sort-c.html  gtest-internal.h.func.html  gtest-internal.h.gcov.html  gtest-port.h.func-sort-c.html  gtest-port.h.func.html  gtest-port.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
src/cobertura/src/test/: coverageTest.cpp.func-sort-c.html  coverageTest.cpp.func.html  coverageTest.cpp.gcov.html  crecimientoHogarenoVsIngresosTEST.cpp.func-sort-c.html  crecimientoHogarenoVsIngresosTEST.cpp.func.html  crecimientoHogarenoVsIngresosTEST.cpp.gcov.html  esEncuestaValidaTEST.cpp.func-sort-c.html  esEncuestaValidaTEST.cpp.func.html  esEncuestaValidaTEST.cpp.gcov.html  generoGPosiblesClientesTEST.cpp.func-sort-c.html  generoGPosiblesClientesTEST.cpp.func.html  generoGPosiblesClientesTEST.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  mayorIngresoPorPersonaActivaTEST.cpp.func-sort-c.html  mayorIngresoPorPersonaActivaTEST.cpp.func.html  mayorIngresoPorPersonaActivaTEST.cpp.gcov.html  nivelEducativoXHogarTEST.cpp.func-sort-c.html  nivelEducativoXHogarTEST.cpp.func.html  nivelEducativoXHogarTEST.cpp.gcov.html  ordenarPorITFTEST.cpp.func-sort-c.html  ordenarPorITFTEST.cpp.func.html  ordenarPorITFTEST.cpp.gcov.html  porcHogaresNoPropMiemMay3TEST.cpp.func-sort-c.html  porcHogaresNoPropMiemMay3TEST.cpp.func.html  porcHogaresNoPropMiemMay3TEST.cpp.gcov.html
src/cobertura/usr/include/c++/8/: cmath.func-sort-c.html  cmath.func.html  cmath.gcov.html  index-sort-f.html  index-sort-l.html  index.html  initializer_list.func-sort-c.html  initializer_list.func.html  initializer_list.gcov.html  new.func-sort-c.html  new.func.html  new.gcov.html  tuple.func-sort-c.html  tuple.func.html  tuple.gcov.html
src/cobertura/usr/include/c++/8/bits/: alloc_traits.h.func-sort-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  allocator.h.func-sort-c.html  allocator.h.func.html  allocator.h.gcov.html  basic_string.h.func-sort-c.html  basic_string.h.func.html  basic_string.h.gcov.html  basic_string.tcc.func-sort-c.html  basic_string.tcc.func.html  basic_string.tcc.gcov.html  char_traits.h.func-sort-c.html  char_traits.h.func.html  char_traits.h.gcov.html  cpp_type_traits.h.func-sort-c.html  cpp_type_traits.h.func.html  cpp_type_traits.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  ios_base.h.func-sort-c.html  ios_base.h.func.html  ios_base.h.gcov.html  move.h.func-sort-c.html  move.h.func.html  move.h.gcov.html  stl_algobase.h.func-sort-c.html  stl_algobase.h.func.html  stl_algobase.h.gcov.html  stl_construct.h.func-sort-c.html  stl_construct.h.func.html  stl_construct.h.gcov.html  stl_iterator.h.func-sort-c.html  stl_iterator.h.func.html  stl_iterator.h.gcov.html  stl_iterator_base_funcs.h.func-sort-c.html  stl_iterator_base_funcs.h.func.html  stl_iterator_base_funcs.h.gcov.html  stl_iterator_base_types.h.func-sort-c.html  (+14 more)
src/cobertura/usr/include/c++/8/ext/: alloc_traits.h.func-sort-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  new_allocator.h.func-sort-c.html  new_allocator.h.func.html  new_allocator.h.gcov.html  string_conversions.h.func-sort-c.html  string_conversions.h.func.html  string_conversions.h.gcov.html  type_traits.h.func-sort-c.html  type_traits.h.func.html  type_traits.h.gcov.html
src/datos/: .~lock.eph_Indiv_2016_CABA.csv#  eph_Hogar_1_2017.csv  eph_Hogar_1_2018.csv  eph_Hogar_2016_CABA.csv  eph_Hogar_2016_CABA_NoValida.csv  eph_Hogar_2017_CABA.csv  eph_Hogar_rnd_1.csv  eph_Hogar_rnd_5.csv  eph_Hogar_rnd_6.csv  eph_Indiv_1_2017.csv  eph_Indiv_1_2018.csv  eph_Indiv_2016_CABA.csv  eph_Indiv_2016_CABA_NoValida.csv  eph_Indiv_2016_CABA_TampocoValida.csv  eph_Indiv_2017_CABA.csv  eph_Indiv_rnd_1.csv  eph_Indiv_rnd_5.csv  eph_Indiv_rnd_6.csv
src/test/: coverageTest.cpp  crecimientoHogarenoVsIngresosTEST.cpp  esEncuestaValidaTEST.cpp  generoGPosiblesClientesTEST.cpp  mayorIngresoPorPersonaActivaTEST.cpp  nivelEducativoXHogarTEST.cpp  ordenarPorITFTEST.cpp  porcHogaresNoPropMiemMay3TEST.cpp
