cmake_minimum_required(VERSION 3.12)
project(src)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(cobertura/src/lib/googletest-master/googletest/include)
include_directories(cobertura/usr/include)
include_directories(lib/googletest-master/googlemock/include)
include_directories(lib/googletest-master/googlemock/include/gmock)
include_directories(lib/googletest-master/googlemock/include/gmock/internal)
include_directories(lib/googletest-master/googlemock/include/gmock/internal/custom)
include_directories(lib/googletest-master/googlemock/test)
include_directories(lib/googletest-master/googletest/include)
include_directories(lib/googletest-master/googletest/include/gtest)
include_directories(lib/googletest-master/googletest/include/gtest/internal)
include_directories(lib/googletest-master/googletest/include/gtest/internal/custom)
include_directories(lib/googletest-master/googletest/samples)
include_directories(lib/googletest-master/googletest/src)
include_directories(lib/googletest-master/googletest/test)
include_directories(lib/googletest-master/googletest/xcode/Samples/FrameworkSample)

add_executable(src
        cmake-build-debug/lib/googletest-master/googlemock/gtest/cmake_install.cmake
        cmake-build-debug/lib/googletest-master/googlemock/gtest/CTestTestfile.cmake
        cmake-build-debug/lib/googletest-master/googlemock/gtest/gtest.cbp
        cmake-build-debug/lib/googletest-master/googlemock/gtest/libgtest_maind.a
        cmake-build-debug/lib/googletest-master/googlemock/gtest/libgtestd.a
        cmake-build-debug/lib/googletest-master/googlemock/gtest/Makefile
        cmake-build-debug/lib/googletest-master/googlemock/cmake_install.cmake
        cmake-build-debug/lib/googletest-master/googlemock/CTestTestfile.cmake
        cmake-build-debug/lib/googletest-master/googlemock/gmock.cbp
        cmake-build-debug/lib/googletest-master/googlemock/Makefile
        cmake-build-debug/lib/googletest-master/cmake_install.cmake
        cmake-build-debug/lib/googletest-master/CTestTestfile.cmake
        cmake-build-debug/lib/googletest-master/googletest-distribution.cbp
        cmake-build-debug/lib/googletest-master/Makefile
        cmake-build-debug/analisisEPH.cbp
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        cmake-build-debug/gmock.pc
        cmake-build-debug/gmock_main.pc
        cmake-build-debug/gtest.pc
        cmake-build-debug/gtest_main.pc
        cmake-build-debug/Makefile
        cobertura/src/lib/googletest-master/googletest/include/gtest/internal/gtest-internal.h.func-sort-c.html
        cobertura/src/lib/googletest-master/googletest/include/gtest/internal/gtest-internal.h.func.html
        cobertura/src/lib/googletest-master/googletest/include/gtest/internal/gtest-internal.h.gcov.html
        cobertura/src/lib/googletest-master/googletest/include/gtest/internal/gtest-port.h.func-sort-c.html
        cobertura/src/lib/googletest-master/googletest/include/gtest/internal/gtest-port.h.func.html
        cobertura/src/lib/googletest-master/googletest/include/gtest/internal/gtest-port.h.gcov.html
        cobertura/src/lib/googletest-master/googletest/include/gtest/internal/index-sort-f.html
        cobertura/src/lib/googletest-master/googletest/include/gtest/internal/index-sort-l.html
        cobertura/src/lib/googletest-master/googletest/include/gtest/internal/index.html
        cobertura/src/lib/googletest-master/googletest/include/gtest/gtest-printers.h.func-sort-c.html
        cobertura/src/lib/googletest-master/googletest/include/gtest/gtest-printers.h.func.html
        cobertura/src/lib/googletest-master/googletest/include/gtest/gtest-printers.h.gcov.html
        cobertura/src/lib/googletest-master/googletest/include/gtest/gtest.h.func-sort-c.html
        cobertura/src/lib/googletest-master/googletest/include/gtest/gtest.h.func.html
        cobertura/src/lib/googletest-master/googletest/include/gtest/gtest.h.gcov.html
        cobertura/src/lib/googletest-master/googletest/include/gtest/index-sort-f.html
        cobertura/src/lib/googletest-master/googletest/include/gtest/index-sort-l.html
        cobertura/src/lib/googletest-master/googletest/include/gtest/index.html
        cobertura/src/test/coverageTest.cpp.func-sort-c.html
        cobertura/src/test/coverageTest.cpp.func.html
        cobertura/src/test/coverageTest.cpp.gcov.html
        cobertura/src/test/crecimientoHogarenoVsIngresosTEST.cpp.func-sort-c.html
        cobertura/src/test/crecimientoHogarenoVsIngresosTEST.cpp.func.html
        cobertura/src/test/crecimientoHogarenoVsIngresosTEST.cpp.gcov.html
        cobertura/src/test/esEncuestaValidaTEST.cpp.func-sort-c.html
        cobertura/src/test/esEncuestaValidaTEST.cpp.func.html
        cobertura/src/test/esEncuestaValidaTEST.cpp.gcov.html
        cobertura/src/test/generoGPosiblesClientesTEST.cpp.func-sort-c.html
        cobertura/src/test/generoGPosiblesClientesTEST.cpp.func.html
        cobertura/src/test/generoGPosiblesClientesTEST.cpp.gcov.html
        cobertura/src/test/index-sort-f.html
        cobertura/src/test/index-sort-l.html
        cobertura/src/test/index.html
        cobertura/src/test/mayorIngresoPorPersonaActivaTEST.cpp.func-sort-c.html
        cobertura/src/test/mayorIngresoPorPersonaActivaTEST.cpp.func.html
        cobertura/src/test/mayorIngresoPorPersonaActivaTEST.cpp.gcov.html
        cobertura/src/test/nivelEducativoXHogarTEST.cpp.func-sort-c.html
        cobertura/src/test/nivelEducativoXHogarTEST.cpp.func.html
        cobertura/src/test/nivelEducativoXHogarTEST.cpp.gcov.html
        cobertura/src/test/ordenarPorITFTEST.cpp.func-sort-c.html
        cobertura/src/test/ordenarPorITFTEST.cpp.func.html
        cobertura/src/test/ordenarPorITFTEST.cpp.gcov.html
        cobertura/src/test/porcHogaresNoPropMiemMay3TEST.cpp.func-sort-c.html
        cobertura/src/test/porcHogaresNoPropMiemMay3TEST.cpp.func.html
        cobertura/src/test/porcHogaresNoPropMiemMay3TEST.cpp.gcov.html
        cobertura/src/ejercicios.cpp.func-sort-c.html
        cobertura/src/ejercicios.cpp.func.html
        cobertura/src/ejercicios.cpp.gcov.html
        cobertura/src/Funciones_TPI.cpp.func-sort-c.html
        cobertura/src/Funciones_TPI.cpp.func.html
        cobertura/src/Funciones_TPI.cpp.gcov.html
        cobertura/src/index-sort-f.html
        cobertura/src/index-sort-l.html
        cobertura/src/index.html
        cobertura/src/main.cpp.func-sort-c.html
        cobertura/src/main.cpp.func.html
        cobertura/src/main.cpp.gcov.html
        cobertura/usr/include/c++/8/bits/alloc_traits.h.func-sort-c.html
        cobertura/usr/include/c++/8/bits/alloc_traits.h.func.html
        cobertura/usr/include/c++/8/bits/alloc_traits.h.gcov.html
        cobertura/usr/include/c++/8/bits/allocator.h.func-sort-c.html
        cobertura/usr/include/c++/8/bits/allocator.h.func.html
        cobertura/usr/include/c++/8/bits/allocator.h.gcov.html
        cobertura/usr/include/c++/8/bits/basic_string.h.func-sort-c.html
        cobertura/usr/include/c++/8/bits/basic_string.h.func.html
        cobertura/usr/include/c++/8/bits/basic_string.h.gcov.html
        cobertura/usr/include/c++/8/bits/basic_string.tcc.func-sort-c.html
        cobertura/usr/include/c++/8/bits/basic_string.tcc.func.html
        cobertura/usr/include/c++/8/bits/basic_string.tcc.gcov.html
        cobertura/usr/include/c++/8/bits/char_traits.h.func-sort-c.html
        cobertura/usr/include/c++/8/bits/char_traits.h.func.html
        cobertura/usr/include/c++/8/bits/char_traits.h.gcov.html
        cobertura/usr/include/c++/8/bits/cpp_type_traits.h.func-sort-c.html
        cobertura/usr/include/c++/8/bits/cpp_type_traits.h.func.html
        cobertura/usr/include/c++/8/bits/cpp_type_traits.h.gcov.html
        cobertura/usr/include/c++/8/bits/index-sort-f.html
        cobertura/usr/include/c++/8/bits/index-sort-l.html
        cobertura/usr/include/c++/8/bits/index.html
        cobertura/usr/include/c++/8/bits/ios_base.h.func-sort-c.html
        cobertura/usr/include/c++/8/bits/ios_base.h.func.html
        cobertura/usr/include/c++/8/bits/ios_base.h.gcov.html
        cobertura/usr/include/c++/8/bits/move.h.func-sort-c.html
        cobertura/usr/include/c++/8/bits/move.h.func.html
        cobertura/usr/include/c++/8/bits/move.h.gcov.html
        cobertura/usr/include/c++/8/bits/stl_algobase.h.func-sort-c.html
        cobertura/usr/include/c++/8/bits/stl_algobase.h.func.html
        cobertura/usr/include/c++/8/bits/stl_algobase.h.gcov.html
        cobertura/usr/include/c++/8/bits/stl_construct.h.func-sort-c.html
        cobertura/usr/include/c++/8/bits/stl_construct.h.func.html
        cobertura/usr/include/c++/8/bits/stl_construct.h.gcov.html
        cobertura/usr/include/c++/8/bits/stl_iterator.h.func-sort-c.html
        cobertura/usr/include/c++/8/bits/stl_iterator.h.func.html
        cobertura/usr/include/c++/8/bits/stl_iterator.h.gcov.html
        cobertura/usr/include/c++/8/bits/stl_iterator_base_funcs.h.func-sort-c.html
        cobertura/usr/include/c++/8/bits/stl_iterator_base_funcs.h.func.html
        cobertura/usr/include/c++/8/bits/stl_iterator_base_funcs.h.gcov.html
        cobertura/usr/include/c++/8/bits/stl_iterator_base_types.h.func-sort-c.html
        cobertura/usr/include/c++/8/bits/stl_iterator_base_types.h.func.html
        cobertura/usr/include/c++/8/bits/stl_iterator_base_types.h.gcov.html
        cobertura/usr/include/c++/8/bits/stl_pair.h.func-sort-c.html
        cobertura/usr/include/c++/8/bits/stl_pair.h.func.html
        cobertura/usr/include/c++/8/bits/stl_pair.h.gcov.html
        cobertura/usr/include/c++/8/bits/stl_uninitialized.h.func-sort-c.html
        cobertura/usr/include/c++/8/bits/stl_uninitialized.h.func.html
        cobertura/usr/include/c++/8/bits/stl_uninitialized.h.gcov.html
        cobertura/usr/include/c++/8/bits/stl_vector.h.func-sort-c.html
        cobertura/usr/include/c++/8/bits/stl_vector.h.func.html
        cobertura/usr/include/c++/8/bits/stl_vector.h.gcov.html
        cobertura/usr/include/c++/8/bits/vector.tcc.func-sort-c.html
        cobertura/usr/include/c++/8/bits/vector.tcc.func.html
        cobertura/usr/include/c++/8/bits/vector.tcc.gcov.html
        cobertura/usr/include/c++/8/ext/alloc_traits.h.func-sort-c.html
        cobertura/usr/include/c++/8/ext/alloc_traits.h.func.html
        cobertura/usr/include/c++/8/ext/alloc_traits.h.gcov.html
        cobertura/usr/include/c++/8/ext/index-sort-f.html
        cobertura/usr/include/c++/8/ext/index-sort-l.html
        cobertura/usr/include/c++/8/ext/index.html
        cobertura/usr/include/c++/8/ext/new_allocator.h.func-sort-c.html
        cobertura/usr/include/c++/8/ext/new_allocator.h.func.html
        cobertura/usr/include/c++/8/ext/new_allocator.h.gcov.html
        cobertura/usr/include/c++/8/ext/string_conversions.h.func-sort-c.html
        cobertura/usr/include/c++/8/ext/string_conversions.h.func.html
        cobertura/usr/include/c++/8/ext/string_conversions.h.gcov.html
        cobertura/usr/include/c++/8/ext/type_traits.h.func-sort-c.html
        cobertura/usr/include/c++/8/ext/type_traits.h.func.html
        cobertura/usr/include/c++/8/ext/type_traits.h.gcov.html
        cobertura/usr/include/c++/8/cmath.func-sort-c.html
        cobertura/usr/include/c++/8/cmath.func.html
        cobertura/usr/include/c++/8/cmath.gcov.html
        cobertura/usr/include/c++/8/index-sort-f.html
        cobertura/usr/include/c++/8/index-sort-l.html
        cobertura/usr/include/c++/8/index.html
        cobertura/usr/include/c++/8/initializer_list.func-sort-c.html
        cobertura/usr/include/c++/8/initializer_list.func.html
        cobertura/usr/include/c++/8/initializer_list.gcov.html
        cobertura/usr/include/c++/8/new.func-sort-c.html
        cobertura/usr/include/c++/8/new.func.html
        cobertura/usr/include/c++/8/new.gcov.html
        cobertura/usr/include/c++/8/tuple.func-sort-c.html
        cobertura/usr/include/c++/8/tuple.func.html
        cobertura/usr/include/c++/8/tuple.gcov.html
        cobertura/amber.png
        cobertura/emerald.png
        cobertura/gcov.css
        cobertura/glass.png
        cobertura/index-sort-f.html
        cobertura/index-sort-l.html
        cobertura/index.html
        cobertura/ruby.png
        cobertura/snow.png
        cobertura/updown.png
        datos/eph_Hogar_1_2017.csv
        datos/eph_Hogar_1_2018.csv
        datos/eph_Hogar_2016_CABA.csv
        datos/eph_Hogar_2016_CABA_NoValida.csv
        datos/eph_Hogar_2017_CABA.csv
        datos/eph_Hogar_rnd_1.csv
        datos/eph_Hogar_rnd_5.csv
        datos/eph_Hogar_rnd_6.csv
        datos/eph_Indiv_1_2017.csv
        datos/eph_Indiv_1_2018.csv
        datos/eph_Indiv_2016_CABA.csv
        datos/eph_Indiv_2016_CABA_NoValida.csv
        datos/eph_Indiv_2016_CABA_TampocoValida.csv
        datos/eph_Indiv_2017_CABA.csv
        datos/eph_Indiv_rnd_1.csv
        datos/eph_Indiv_rnd_5.csv
        datos/eph_Indiv_rnd_6.csv
        lib/googletest-master/googlemock/include/gmock/internal/custom/gmock-generated-actions.h
        lib/googletest-master/googlemock/include/gmock/internal/custom/gmock-matchers.h
        lib/googletest-master/googlemock/include/gmock/internal/custom/gmock-port.h
        lib/googletest-master/googlemock/include/gmock/internal/gmock-generated-internal-utils.h
        lib/googletest-master/googlemock/include/gmock/internal/gmock-internal-utils.h
        lib/googletest-master/googlemock/include/gmock/internal/gmock-port.h
        lib/googletest-master/googlemock/include/gmock/gmock-actions.h
        lib/googletest-master/googlemock/include/gmock/gmock-cardinalities.h
        lib/googletest-master/googlemock/include/gmock/gmock-generated-actions.h
        lib/googletest-master/googlemock/include/gmock/gmock-generated-function-mockers.h
        lib/googletest-master/googlemock/include/gmock/gmock-generated-matchers.h
        lib/googletest-master/googlemock/include/gmock/gmock-generated-nice-strict.h
        lib/googletest-master/googlemock/include/gmock/gmock-matchers.h
        lib/googletest-master/googlemock/include/gmock/gmock-more-actions.h
        lib/googletest-master/googlemock/include/gmock/gmock-more-matchers.h
        lib/googletest-master/googlemock/include/gmock/gmock-spec-builders.h
        lib/googletest-master/googlemock/include/gmock/gmock.h
        lib/googletest-master/googlemock/src/gmock-all.cc
        lib/googletest-master/googlemock/src/gmock-cardinalities.cc
        lib/googletest-master/googlemock/src/gmock-internal-utils.cc
        lib/googletest-master/googlemock/src/gmock-matchers.cc
        lib/googletest-master/googlemock/src/gmock-spec-builders.cc
        lib/googletest-master/googlemock/src/gmock.cc
        lib/googletest-master/googlemock/src/gmock_main.cc
        lib/googletest-master/googlemock/test/gmock-actions_test.cc
        lib/googletest-master/googlemock/test/gmock-cardinalities_test.cc
        lib/googletest-master/googlemock/test/gmock-generated-actions_test.cc
        lib/googletest-master/googlemock/test/gmock-generated-function-mockers_test.cc
        lib/googletest-master/googlemock/test/gmock-generated-internal-utils_test.cc
        lib/googletest-master/googlemock/test/gmock-generated-matchers_test.cc
        lib/googletest-master/googlemock/test/gmock-internal-utils_test.cc
        lib/googletest-master/googlemock/test/gmock-matchers_test.cc
        lib/googletest-master/googlemock/test/gmock-more-actions_test.cc
        lib/googletest-master/googlemock/test/gmock-nice-strict_test.cc
        lib/googletest-master/googlemock/test/gmock-port_test.cc
        lib/googletest-master/googlemock/test/gmock-spec-builders_test.cc
        lib/googletest-master/googlemock/test/gmock_all_test.cc
        lib/googletest-master/googlemock/test/gmock_ex_test.cc
        lib/googletest-master/googlemock/test/gmock_leak_test_.cc
        lib/googletest-master/googlemock/test/gmock_link2_test.cc
        lib/googletest-master/googlemock/test/gmock_link_test.cc
        lib/googletest-master/googlemock/test/gmock_link_test.h
        lib/googletest-master/googlemock/test/gmock_output_test_.cc
        lib/googletest-master/googlemock/test/gmock_stress_test.cc
        lib/googletest-master/googlemock/test/gmock_test.cc
        lib/googletest-master/googletest/codegear/gtest_all.cc
        lib/googletest-master/googletest/codegear/gtest_link.cc
        lib/googletest-master/googletest/include/gtest/internal/custom/gtest-port.h
        lib/googletest-master/googletest/include/gtest/internal/custom/gtest-printers.h
        lib/googletest-master/googletest/include/gtest/internal/custom/gtest.h
        lib/googletest-master/googletest/include/gtest/internal/gtest-death-test-internal.h
        lib/googletest-master/googletest/include/gtest/internal/gtest-filepath.h
        lib/googletest-master/googletest/include/gtest/internal/gtest-internal.h
        lib/googletest-master/googletest/include/gtest/internal/gtest-linked_ptr.h
        lib/googletest-master/googletest/include/gtest/internal/gtest-param-util-generated.h
        lib/googletest-master/googletest/include/gtest/internal/gtest-param-util.h
        lib/googletest-master/googletest/include/gtest/internal/gtest-port-arch.h
        lib/googletest-master/googletest/include/gtest/internal/gtest-port.h
        lib/googletest-master/googletest/include/gtest/internal/gtest-string.h
        lib/googletest-master/googletest/include/gtest/internal/gtest-tuple.h
        lib/googletest-master/googletest/include/gtest/internal/gtest-type-util.h
        lib/googletest-master/googletest/include/gtest/gtest-death-test.h
        lib/googletest-master/googletest/include/gtest/gtest-message.h
        lib/googletest-master/googletest/include/gtest/gtest-param-test.h
        lib/googletest-master/googletest/include/gtest/gtest-printers.h
        lib/googletest-master/googletest/include/gtest/gtest-spi.h
        lib/googletest-master/googletest/include/gtest/gtest-test-part.h
        lib/googletest-master/googletest/include/gtest/gtest-typed-test.h
        lib/googletest-master/googletest/include/gtest/gtest.h
        lib/googletest-master/googletest/include/gtest/gtest_pred_impl.h
        lib/googletest-master/googletest/include/gtest/gtest_prod.h
        lib/googletest-master/googletest/samples/prime_tables.h
        lib/googletest-master/googletest/samples/sample1.cc
        lib/googletest-master/googletest/samples/sample1.h
        lib/googletest-master/googletest/samples/sample10_unittest.cc
        lib/googletest-master/googletest/samples/sample1_unittest.cc
        lib/googletest-master/googletest/samples/sample2.cc
        lib/googletest-master/googletest/samples/sample2.h
        lib/googletest-master/googletest/samples/sample2_unittest.cc
        lib/googletest-master/googletest/samples/sample3-inl.h
        lib/googletest-master/googletest/samples/sample3_unittest.cc
        lib/googletest-master/googletest/samples/sample4.cc
        lib/googletest-master/googletest/samples/sample4.h
        lib/googletest-master/googletest/samples/sample4_unittest.cc
        lib/googletest-master/googletest/samples/sample5_unittest.cc
        lib/googletest-master/googletest/samples/sample6_unittest.cc
        lib/googletest-master/googletest/samples/sample7_unittest.cc
        lib/googletest-master/googletest/samples/sample8_unittest.cc
        lib/googletest-master/googletest/samples/sample9_unittest.cc
        lib/googletest-master/googletest/src/gtest-all.cc
        lib/googletest-master/googletest/src/gtest-death-test.cc
        lib/googletest-master/googletest/src/gtest-filepath.cc
        lib/googletest-master/googletest/src/gtest-internal-inl.h
        lib/googletest-master/googletest/src/gtest-port.cc
        lib/googletest-master/googletest/src/gtest-printers.cc
        lib/googletest-master/googletest/src/gtest-test-part.cc
        lib/googletest-master/googletest/src/gtest-typed-test.cc
        lib/googletest-master/googletest/src/gtest.cc
        lib/googletest-master/googletest/src/gtest_main.cc
        lib/googletest-master/googletest/test/gtest-death-test_ex_test.cc
        lib/googletest-master/googletest/test/gtest-death-test_test.cc
        lib/googletest-master/googletest/test/gtest-filepath_test.cc
        lib/googletest-master/googletest/test/gtest-linked_ptr_test.cc
        lib/googletest-master/googletest/test/gtest-listener_test.cc
        lib/googletest-master/googletest/test/gtest-message_test.cc
        lib/googletest-master/googletest/test/gtest-options_test.cc
        lib/googletest-master/googletest/test/gtest-param-test2_test.cc
        lib/googletest-master/googletest/test/gtest-param-test_test.cc
        lib/googletest-master/googletest/test/gtest-param-test_test.h
        lib/googletest-master/googletest/test/gtest-port_test.cc
        lib/googletest-master/googletest/test/gtest-printers_test.cc
        lib/googletest-master/googletest/test/gtest-test-part_test.cc
        lib/googletest-master/googletest/test/gtest-tuple_test.cc
        lib/googletest-master/googletest/test/gtest-typed-test2_test.cc
        lib/googletest-master/googletest/test/gtest-typed-test_test.cc
        lib/googletest-master/googletest/test/gtest-typed-test_test.h
        lib/googletest-master/googletest/test/gtest-unittest-api_test.cc
        lib/googletest-master/googletest/test/gtest_all_test.cc
        lib/googletest-master/googletest/test/gtest_assert_by_exception_test.cc
        lib/googletest-master/googletest/test/gtest_break_on_failure_unittest_.cc
        lib/googletest-master/googletest/test/gtest_catch_exceptions_test_.cc
        lib/googletest-master/googletest/test/gtest_color_test_.cc
        lib/googletest-master/googletest/test/gtest_env_var_test_.cc
        lib/googletest-master/googletest/test/gtest_environment_test.cc
        lib/googletest-master/googletest/test/gtest_filter_unittest_.cc
        lib/googletest-master/googletest/test/gtest_help_test_.cc
        lib/googletest-master/googletest/test/gtest_list_tests_unittest_.cc
        lib/googletest-master/googletest/test/gtest_main_unittest.cc
        lib/googletest-master/googletest/test/gtest_no_test_unittest.cc
        lib/googletest-master/googletest/test/gtest_output_test_.cc
        lib/googletest-master/googletest/test/gtest_pred_impl_unittest.cc
        lib/googletest-master/googletest/test/gtest_premature_exit_test.cc
        lib/googletest-master/googletest/test/gtest_prod_test.cc
        lib/googletest-master/googletest/test/gtest_repeat_test.cc
        lib/googletest-master/googletest/test/gtest_shuffle_test_.cc
        lib/googletest-master/googletest/test/gtest_sole_header_test.cc
        lib/googletest-master/googletest/test/gtest_stress_test.cc
        lib/googletest-master/googletest/test/gtest_throw_on_failure_ex_test.cc
        lib/googletest-master/googletest/test/gtest_throw_on_failure_test_.cc
        lib/googletest-master/googletest/test/gtest_uninitialized_test_.cc
        lib/googletest-master/googletest/test/gtest_unittest.cc
        lib/googletest-master/googletest/test/gtest_xml_outfile1_test_.cc
        lib/googletest-master/googletest/test/gtest_xml_outfile2_test_.cc
        lib/googletest-master/googletest/test/gtest_xml_output_unittest_.cc
        lib/googletest-master/googletest/test/production.cc
        lib/googletest-master/googletest/test/production.h
        lib/googletest-master/googletest/xcode/Samples/FrameworkSample/widget.cc
        lib/googletest-master/googletest/xcode/Samples/FrameworkSample/widget.h
        lib/googletest-master/googletest/xcode/Samples/FrameworkSample/widget_test.cc
        test/coverageTest.cpp
        test/crecimientoHogarenoVsIngresosTEST.cpp
        test/esEncuestaValidaTEST.cpp
        test/generoGPosiblesClientesTEST.cpp
        test/mayorIngresoPorPersonaActivaTEST.cpp
        test/nivelEducativoXHogarTEST.cpp
        test/ordenarPorITFTEST.cpp
        test/porcHogaresNoPropMiemMay3TEST.cpp
        analisisEPH
        CMakeLists.txt
        COBERTURA.pdf
        coverage.info
        definiciones.h
        ejercicios.cpp
        ejercicios.h
        Funciones_TPI.cpp
        Funciones_TPI.h
        main.cpp
        README)
